added footer and styling

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="container-fluid">
                 <a class="navbar-nav" href="#"><img src="images/cc_logo.png" width="15%"alt="Chamberlain Logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <div class="navbar-toggler-icon text-accent">=</div>
+                    <div class="navbar-toggler-icon text-champagne f4">=</div>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
@@ -58,7 +58,7 @@
             </div>
 
             <div id="text-layer" class="position-absolute top-0 w-100 h-100 z4 d-flex flex-column justify-content-center align-items-center text-white" style="flex-wrap: wrap;">
-                <h1 class="display-2">Chamberlain's</h1>
+                <h1 class="display-1 text-champagne">Chamberlain's</h1>
                 <div class="h5">Gourmet Chocolate Factory</div>                
             </div>
 
@@ -122,23 +122,23 @@
                 <div class="col-md-6 p-md-5 d-flex justify-content-center">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3306.8774729866122!2d-84.31763758482072!3d34.02135592680461!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88f50b2b3bbe559d%3A0xe6311d6ecfbcd9a3!2sChamberlains%20Chocolate%20Factory%20and%20Cafe!5e0!3m2!1sen!2sus!4v1632670900745!5m2!1sen!2sus" width="90%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
-                <div class="col-md-6 p-5 d-flex flex-column align-items-center justify-content-center">
+                <div class="col-md-6 d-flex flex-column align-items-center justify-content-center">
                     <h2 class="display-4 playfair pb-3">Contact Us<hr></h2>
-                    <div class="row d-flex flex-column lead">
-                        <div class="col d-flex pb-3">
-                            <div class="pe-3 col-4"><i class="fas fa-compass"></i>  Location: </div>
-                            <div>1575 Old Alabama Rd, Suite 205<br>
+                    <div class="row flex-column lead">
+                        <div class="col d-flex">
+                            <div class="pe-3 col-4 pb-3 bold playfair"><i class="fas fa-compass"></i>  Location: </div>
+                            <div class="pb-3">1575 Old Alabama Rd, Suite 205<br>
                                 Roswell, GA 30076</div>
                         </div>
                         <div class="col d-flex pb-3">
-                            <div class="pe-3 col-4"><i class="fas fa-phone"></i>  Phone: </div>
+                            <div class="pe-3 col-4 bold playfair"><i class="fas fa-phone"></i>  Phone: </div>
                             <div>(678) 728-0100</div>
                         </div>
                         <div class="col d-flex pb-3">
-                            <div class="pe-3 col-4"><i class="fas fa-paper-plane"></i>  Email:</div>
-                            <div>info@chamberlainschocolate.com</div>
+                            <div class="pe-3 col-4 bold playfair"><i class="fas fa-paper-plane"></i>  Email:</div>
+                            <div class="text-accent"><a href = "mailto: info@chamberlainschocolate.com">info@chamberlainschocolate.com</a></div>
                         </div>
-                        <div class="col d-flex pb-3">
+                        <div class="col d-flex pb-3 bold playfair">
                             <div class="pe-3 col-4"><i class="far fa-calendar-alt"></i>  Hours:</div>
                             <div>Tues.-Sat. 10:00am - 4:00pm</div>
                         </div>
@@ -147,22 +147,36 @@
 
             </div>
 
-            <div class="ps-rose">
-
-            </div>
-
-            <div class="ps-light">
-
-            </div>
-
-            <div class="ps-rose">
-
-            </div>
-
         </main>
 
-        <footer>
-            
+        <footer class="row p-5">
+            <div class="col-4 d-flex flex-column align-items-center">
+                <div class="playfair bold text-purple">Our Guarantee<hr></div>
+                <div class="text-accent pb-3" style="font-size: 0.8rem">We guarantee you'll be completely satisfied with your purchase of Chamberlain's Chocolates, or your money back.</div>
+                <div class="row text-purple f3">
+                    <div class="col-6">
+                        <a href="https://www.facebook.com/ChamberlainsChocolate/"><i class="fab fa-facebook-square"></i></a>
+                    </div>    
+                    <div class="col-6">
+                        <a href="https://www.instagram.com/chamberlainschocolates/"><i class="fab fa-instagram-square"></i></a>
+                    </div>  
+                </div>
+            </div>
+            <div class="col-4 d-flex flex-column align-items-center">
+                <div class="playfair bold text-purple">Contact Us<hr></div>
+                <div class="text-accent" style="font-size: 0.8rem">Chamberlain's Chocolates<br>
+                    1575 Old Alabama Rd<br>
+                    Roswell, GA 30076<br>
+                    (678) 728-0100 <br>
+                    <a href = "mailto: info@chamberlainschocolate.com">info@chamberlainschocolate.com</a>
+                </div>
+            </div>
+            <div class="col-4 d-flex flex-column align-items-center">
+                <div class="playfair bold text-purple">Safe Shopping<hr></div>
+                <div class="text-accent" style="font-size: 0.8rem">You can shop at Chamberlain's Chocolates with confidence. We have partnered with Authorize.Net , a leading payment gateway since 1996, to accept credit cards and electronic check payments safely and securely for our customers.
+                </div>
+                <div class="d-flex align-items-center"><img src="https://verify.authorize.net/anetseal/images/secure90x72.gif" alt="Autorize.Net Logo"></div>
+            </div>
         </footer>
     
     </div>
