added 'about' page and updated logo to match color scheme

--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@
 
         <nav class="navbar navbar-expand-md bg-black text-champagne sticky-top playfair">
             <div class="container-fluid">
-                <a class="navbar-nav" href="#"><img src="images/cc_logo.png" width="15%"alt="Chamberlain Logo"></a>
+                <a class="navbar-nav" href="#"><img src="images/cc_logo_champagne.png" width="15%"alt="Chamberlain Logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <div class="navbar-toggler-icon text-champagne f4">=</div>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item ms-xs-2 ms-sm-2 ms-md-0">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item ms-xs-2 ms-sm-2 ms-md-0">
-                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link" href="about.html">About</a>
                         </li>
                         <li class="nav-item ms-xs-2 ms-sm-2 ms-md-0">
                             <a class="nav-link" href="#">Shop</a>
                         </li>
                         <li class="nav-item ms-xs-2 ms-sm-2 ms-md-0">
-                            <a class="nav-link">Contact</a>
+                            <a class="nav-link" href="#">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -149,8 +149,8 @@
 
         </main>
 
-        <footer class="row p-5">
-            <div class="col-4 d-flex flex-column align-items-center">
+        <footer class="row p-sm-4 p-md-5">
+            <div class="pb-sm-4 col-md-4 d-flex flex-column align-items-center">
                 <div class="playfair bold text-purple">Our Guarantee<hr></div>
                 <div class="text-accent pb-3" style="font-size: 0.8rem">We guarantee you'll be completely satisfied with your purchase of Chamberlain's Chocolates, or your money back.</div>
                 <div class="row text-purple f3">
@@ -162,7 +162,7 @@
                     </div>  
                 </div>
             </div>
-            <div class="col-4 d-flex flex-column align-items-center">
+            <div class="pb-sm-4 col-md-4 d-flex flex-column align-items-center">
                 <div class="playfair bold text-purple">Contact Us<hr></div>
                 <div class="text-accent" style="font-size: 0.8rem">Chamberlain's Chocolates<br>
                     1575 Old Alabama Rd<br>
@@ -171,7 +171,7 @@
                     <a href = "mailto: info@chamberlainschocolate.com">info@chamberlainschocolate.com</a>
                 </div>
             </div>
-            <div class="col-4 d-flex flex-column align-items-center">
+            <div class="pb-sm-4 col-md-4 d-flex flex-column align-items-center">
                 <div class="playfair bold text-purple">Safe Shopping<hr></div>
                 <div class="text-accent" style="font-size: 0.8rem">You can shop at Chamberlain's Chocolates with confidence. We have partnered with Authorize.Net , a leading payment gateway since 1996, to accept credit cards and electronic check payments safely and securely for our customers.
                 </div>
