--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
             </div>
 
             <div class="ps-light row m-0 pt-5">
-                <div class="col-6 p-5 d-flex flex-column align-items-center justify-content-center">
+                <div class="col-md-6 p-5 d-flex flex-column align-items-center justify-content-center">
                     <h2 class="display-4 playfair pb-3">Dream<hr></h2>
                     <article class="lead">
                         If you can imagine it, we can make it out of chocolate.  We have over 3,000 different molds in stock.  If a custom design is what you are looking for, we can handle that as well. <br> <br>
@@ -84,8 +84,8 @@
             </div>
         </main>
 
-        <footer class="row p-sm-4 p-md-5">
-            <div class="pb-sm-4 col-md-4 d-flex flex-column align-items-center">
+        <footer class="row p-5 m-0">
+            <div class="pb-xs-4 pb-sm-4 col-md-4 d-flex flex-column align-items-center justify-content-center">
                 <div class="playfair bold text-purple">Our Guarantee<hr></div>
                 <div class="text-accent pb-3" style="font-size: 0.8rem">We guarantee you'll be completely satisfied with your purchase of Chamberlain's Chocolates, or your money back.</div>
                 <div class="row text-purple f3">
@@ -94,19 +94,20 @@
                     </div>    
                     <div class="col-6">
                         <a href="https://www.instagram.com/chamberlainschocolates/"><i class="fab fa-instagram-square"></i></a>
-                    </div>  
+                    </div> 
                 </div>
             </div>
-            <div class="pb-sm-4 col-md-4 d-flex flex-column align-items-center">
+            <div class="pb-xs-4 pb-sm-4 col-md-4 d-flex flex-column align-items-center">
                 <div class="playfair bold text-purple">Contact Us<hr></div>
                 <div class="text-accent" style="font-size: 0.8rem">Chamberlain's Chocolates<br>
                     1575 Old Alabama Rd<br>
                     Roswell, GA 30076<br>
                     (678) 728-0100 <br>
                     <a href = "mailto: info@chamberlainschocolate.com">info@chamberlainschocolate.com</a>
+                    <br><br>
                 </div>
             </div>
-            <div class="pb-sm-4 col-md-4 d-flex flex-column align-items-center">
+            <div class="pb-xs-4 pb-sm-4 pt-xs-4 pt-sm-4 col-md-4 d-flex flex-column align-items-center">
                 <div class="playfair bold text-purple">Safe Shopping<hr></div>
                 <div class="text-accent" style="font-size: 0.8rem">You can shop at Chamberlain's Chocolates with confidence. We have partnered with Authorize.Net , a leading payment gateway since 1996, to accept credit cards and electronic check payments safely and securely for our customers.
                 </div>
