--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3306.8774729866122!2d-84.31763758482072!3d34.02135592680461!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88f50b2b3bbe559d%3A0xe6311d6ecfbcd9a3!2sChamberlains%20Chocolate%20Factory%20and%20Cafe!5e0!3m2!1sen!2sus!4v1632670900745!5m2!1sen!2sus" width="90%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
                 <div class="col-md-6 d-flex flex-column align-items-center justify-content-center">
-                    <h2 class="display-4 playfair pb-3">Contact Us<hr></h2>
-                    <div class="row flex-column lead">
+                    <h2 class="display-4 playfair pb-3 pt-xs-5 pt-sm-5">Contact Us<hr></h2>
+                    <div class="row flex-column lead pb-5">
                         <div class="col d-flex">
                             <div class="pe-3 col-4 pb-3 bold playfair"><i class="fas fa-compass"></i>  Location: </div>
                             <div class="pb-3">1575 Old Alabama Rd, Suite 205<br>
@@ -149,8 +149,8 @@
 
         </main>
 
-        <footer class="row p-sm-4 p-md-5">
-            <div class="pb-sm-4 col-md-4 d-flex flex-column align-items-center">
+        <footer class="row p-5 m-0">
+            <div class="pb-xs-4 pb-sm-4 col-md-4 d-flex flex-column align-items-center justify-content-center">
                 <div class="playfair bold text-purple">Our Guarantee<hr></div>
                 <div class="text-accent pb-3" style="font-size: 0.8rem">We guarantee you'll be completely satisfied with your purchase of Chamberlain's Chocolates, or your money back.</div>
                 <div class="row text-purple f3">
@@ -159,19 +159,20 @@
                     </div>    
                     <div class="col-6">
                         <a href="https://www.instagram.com/chamberlainschocolates/"><i class="fab fa-instagram-square"></i></a>
-                    </div>  
+                    </div> 
                 </div>
             </div>
-            <div class="pb-sm-4 col-md-4 d-flex flex-column align-items-center">
+            <div class="pb-xs-4 pb-sm-4 col-md-4 d-flex flex-column align-items-center">
                 <div class="playfair bold text-purple">Contact Us<hr></div>
                 <div class="text-accent" style="font-size: 0.8rem">Chamberlain's Chocolates<br>
                     1575 Old Alabama Rd<br>
                     Roswell, GA 30076<br>
                     (678) 728-0100 <br>
                     <a href = "mailto: info@chamberlainschocolate.com">info@chamberlainschocolate.com</a>
+                    <br><br>
                 </div>
             </div>
-            <div class="pb-sm-4 col-md-4 d-flex flex-column align-items-center">
+            <div class="pb-xs-4 pb-sm-4 pt-xs-4 pt-sm-4 col-md-4 d-flex flex-column align-items-center">
                 <div class="playfair bold text-purple">Safe Shopping<hr></div>
                 <div class="text-accent" style="font-size: 0.8rem">You can shop at Chamberlain's Chocolates with confidence. We have partnered with Authorize.Net , a leading payment gateway since 1996, to accept credit cards and electronic check payments safely and securely for our customers.
                 </div>
