--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </main>
 
         <footer class="row p-5 m-0">
-            <div class="pb-xs-4 pb-sm-4 col-md-4 d-flex flex-column align-items-center justify-content-center">
+            <div class="pb-xs-4 pb-sm-4 col-md-4 d-flex flex-column align-items-center">
                 <div class="playfair bold text-purple">Our Guarantee<hr></div>
                 <div class="text-accent pb-3" style="font-size: 0.8rem">We guarantee you'll be completely satisfied with your purchase of Chamberlain's Chocolates, or your money back.</div>
                 <div class="row text-purple f3">
@@ -172,7 +172,7 @@
                     <br><br>
                 </div>
             </div>
-            <div class="pb-xs-4 pb-sm-4 pt-xs-4 pt-sm-4 col-md-4 d-flex flex-column align-items-center">
+            <div class="pb-xs-4 pb-sm-4 pt-xs-4 pt-sm-4 pt-md-0 col-md-4 d-flex flex-column align-items-center">
                 <div class="playfair bold text-purple">Safe Shopping<hr></div>
                 <div class="text-accent" style="font-size: 0.8rem">You can shop at Chamberlain's Chocolates with confidence. We have partnered with Authorize.Net , a leading payment gateway since 1996, to accept credit cards and electronic check payments safely and securely for our customers.
                 </div>
