--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <div class="parallax2"></div>
 
             <div class="ps-light row m-0 pt-5">
-                <div class="col-md-6 p-md-5 d-flex justify-content-center">
+                <div class="col-md-6 p-5 d-flex justify-content-center">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3306.8774729866122!2d-84.31763758482072!3d34.02135592680461!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88f50b2b3bbe559d%3A0xe6311d6ecfbcd9a3!2sChamberlains%20Chocolate%20Factory%20and%20Cafe!5e0!3m2!1sen!2sus!4v1632670900745!5m2!1sen!2sus" width="90%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
                 <div class="col-md-6 d-flex flex-column align-items-center justify-content-center">
