updated font sizing, updated logo size in nav bar

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     
         <nav class="navbar navbar-expand-md bg-black text-champagne sticky-top playfair">
             <div class="container-fluid">
-                <a class="navbar-nav" href="#"><img src="images/cc_logo_champagne.png" width="15%"alt="Chamberlain Logo"></a>
+                <a class="navbar-nav" href="#"><img src="images/cc_logo_champagne.png" width="25%"alt="Chamberlain Logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <div class="navbar-toggler-icon text-champagne f4">=</div>
                 </button>
@@ -54,7 +54,7 @@
                 </div>
                 <div class="col-md-6 p-5 d-flex flex-column align-items-center justify-content-center">
                     <h2 class="display-4 playfair pb-3">About Us<hr></h2>
-                    <article class="lead">
+                    <article class="f5">
                         Chamberlain’s Chocolate Factory is a family dream come true for the O’Neill’s. While Brian likes to fashion himself as a modern day Willy Wonka, tinkering with machinery and coming up with ingenious recipes, his wife and partner MJ keeps the schedule moving and the orders flying. Of course, it’s only possible with the help of their daughters. Even their little one likes to try her hand at being an Oompah Loompa. <br><br>
                         Chamberlain’s Chocolates has been a local Atlanta favorite for over twenty years.  We opened our doors in 1986 in Dunwoody Village, just North of the city. Although the ownership and location has changed through the years, one constant is the high quality chocolate made at our store.
                     </article>
@@ -64,7 +64,7 @@
             <div class="ps-champagne row m-0 pt-5">
                 <div class="col p-5 d-flex flex-column align-items-center justify-content-center">
                     <h2 class="display-4 playfair pb-3">Our Mission<hr></h2>
-                    <article class="lead">
+                    <article class="f5">
                         We take great care to include the finest possible ingredients in each of our candies.  Our mission is to provide you with fresh, original, fabulous tasting chocolate. We are a full service chocolatier.  We make all of our own ganache for truffles as well as creams, caramels and toffees. Over the years, we have added new favorites and improved the old standbys.  As we are known to listen carefully to our customers, it is not unusual for us to fashion new favorites based on customer ideas and input. 
                     </article>
                 </div>
@@ -73,7 +73,7 @@
             <div class="ps-light row m-0 pt-5">
                 <div class="col-md-6 p-5 d-flex flex-column align-items-center justify-content-center">
                     <h2 class="display-4 playfair pb-3">Dream<hr></h2>
-                    <article class="lead">
+                    <article class="f5">
                         If you can imagine it, we can make it out of chocolate.  We have over 3,000 different molds in stock.  If a custom design is what you are looking for, we can handle that as well. <br> <br>
                         Please enjoy your time here at Chamberlain’s Online. Order some of our handmade confections and experience truly wonderful chocolate.  Be assured, we stand behind our product.  We will not be satisfied until you are.
                     </article>
