--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <nav class="navbar navbar-expand-md bg-black text-champagne sticky-top playfair">
             <div class="container-fluid">
-                <a class="navbar-nav" href="#"><img src="images/cc_logo_champagne.png" width="15%"alt="Chamberlain Logo"></a>
+                <a class="navbar-nav" href="#"><img src="images/cc_logo_champagne.png" width="25%"alt="Chamberlain Logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <div class="navbar-toggler-icon text-champagne f4">=</div>
                 </button>
@@ -36,7 +36,7 @@
                             <a class="nav-link" href="#">Shop</a>
                         </li>
                         <li class="nav-item ms-xs-2 ms-sm-2 ms-md-0">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -105,7 +105,7 @@
             <div class="ps-champagne row m-0 pt-5">
                 <div class="col-md-6 p-5 d-flex flex-column align-items-center justify-content-center">
                     <h2 class="display-4 playfair pb-3">Our Story<hr></h2>
-                    <article class="lead">
+                    <article class="f5">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam odio blanditiis velit sed doloremque quam esse sequi. Distinctio, ab modi consectetur repellat quod sequi laboriosam, omnis aliquid perferendis recusandae accusamus!
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis exercitationem molestias cupiditate numquam consequatur ea veniam suscipit, doloribus sapiente labore earum ab ipsam voluptatem aliquid obcaecati commodi at iusto perspiciatis?
                     </article>
@@ -124,7 +124,7 @@
                 </div>
                 <div class="col-md-6 d-flex flex-column align-items-center justify-content-center">
                     <h2 class="display-4 playfair pb-3 pt-xs-5 pt-sm-5">Contact Us<hr></h2>
-                    <div class="row flex-column lead pb-5">
+                    <div class="row flex-column f5 pb-5">
                         <div class="col d-flex">
                             <div class="pe-3 col-4 pb-3 bold playfair"><i class="fas fa-compass"></i>  Location: </div>
                             <div class="pb-3">1575 Old Alabama Rd, Suite 205<br>
