modified display of rows/columns for medium-display devices

--- a/about.html
+++ b/about.html
@@ -49,10 +49,10 @@
 
         <main>
             <div class="ps-light row m-0 pt-5">
-                <div class="col-md-6 p-5 d-flex justify-content-center">
+                <div class="col-lg-6 p-5 pb-0 d-flex justify-content-center">
                     <img src="images/coffee_beans.jpg" width="80%" height="80%" alt="">
                 </div>
-                <div class="col-md-6 p-5 d-flex flex-column align-items-center justify-content-center">
+                <div class="col-lg-6 p-5 d-flex flex-column align-items-center justify-content-center">
                     <h2 class="display-4 playfair pb-3">About Us<hr></h2>
                     <article class="f5">
                         Chamberlain’s Chocolate Factory is a family dream come true for the O’Neill’s. While Brian likes to fashion himself as a modern day Willy Wonka, tinkering with machinery and coming up with ingenious recipes, his wife and partner MJ keeps the schedule moving and the orders flying. Of course, it’s only possible with the help of their daughters. Even their little one likes to try her hand at being an Oompah Loompa. <br><br>
@@ -71,14 +71,14 @@
             </div>
 
             <div class="ps-light row m-0 pt-5">
-                <div class="col-md-6 p-5 d-flex flex-column align-items-center justify-content-center">
+                <div class="col-lg-6 p-5 d-flex flex-column align-items-center justify-content-center">
                     <h2 class="display-4 playfair pb-3">Dream<hr></h2>
                     <article class="f5">
                         If you can imagine it, we can make it out of chocolate.  We have over 3,000 different molds in stock.  If a custom design is what you are looking for, we can handle that as well. <br> <br>
                         Please enjoy your time here at Chamberlain’s Online. Order some of our handmade confections and experience truly wonderful chocolate.  Be assured, we stand behind our product.  We will not be satisfied until you are.
                     </article>
                 </div>
-                <div class="col-md-6 p-5 d-flex justify-content-center">
+                <div class="col-lg-6 p-5 d-flex justify-content-center">
                     <img src="images/choco_strawberries.jpg" width="80%" height="80%" alt="">
                 </div>
             </div>
