--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
             <div class="parallax"></div>
 
             <div class="ps-champagne row m-0 pt-5">
-                <div class="col-md-6 p-5 d-flex flex-column align-items-center justify-content-center">
+                <div class="col-lg-6 p-5 d-flex flex-column align-items-center justify-content-center">
                     <h2 class="display-4 playfair pb-3">Our Story<hr></h2>
                     <article class="f5">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam odio blanditiis velit sed doloremque quam esse sequi. Distinctio, ab modi consectetur repellat quod sequi laboriosam, omnis aliquid perferendis recusandae accusamus!
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis exercitationem molestias cupiditate numquam consequatur ea veniam suscipit, doloribus sapiente labore earum ab ipsam voluptatem aliquid obcaecati commodi at iusto perspiciatis?
                     </article>
                 </div>
-                <div class="col-md-6 p-5 d-flex justify-content-center">
+                <div class="col-lg-6 p-5 d-flex justify-content-center">
                     <img src="images/chocolate_nibs.jpg" width="80%" height="auto" alt="">
                 </div>
                 
@@ -119,10 +119,10 @@
             <div class="parallax2"></div>
 
             <div class="ps-light row m-0 pt-5">
-                <div class="col-md-6 p-5 d-flex justify-content-center">
+                <div class="col-lg-6 p-5 d-flex justify-content-center">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3306.8774729866122!2d-84.31763758482072!3d34.02135592680461!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88f50b2b3bbe559d%3A0xe6311d6ecfbcd9a3!2sChamberlains%20Chocolate%20Factory%20and%20Cafe!5e0!3m2!1sen!2sus!4v1632670900745!5m2!1sen!2sus" width="90%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
-                <div class="col-md-6 d-flex flex-column align-items-center justify-content-center">
+                <div class="col-lg-6 d-flex flex-column align-items-center justify-content-center">
                     <h2 class="display-4 playfair pb-3 pt-xs-5 pt-sm-5">Contact Us<hr></h2>
                     <div class="row flex-column f5 pb-5">
                         <div class="col d-flex">
