changed card alignment

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
             <div class="ps-light row m-0 pt-5">
                 <h2 class="col-12 pb-5 d-flex align-items-center justify-content-center display-4 playfair">Seasonal Favorites</h2><hr>
-                <div class="col-md-4  pb-5 d-flex align-items-center justify-content-center">
+                <div class="col-md-4  pb-5 d-flex align-items-start justify-content-center">
                     <div class="card" style="width: 20rem;">
                         <img src="images/strawberry.jpg" class="card-img-top" alt="strawberry with chocolate sauce">
                         <div class="card-body">
@@ -78,7 +78,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 pb-5 d-flex align-items-center justify-content-center">
+                <div class="col-md-4 pb-5 d-flex align-items-start justify-content-center">
                     <div class="card" style="width: 20rem;">
                         <img src="images/truffle.jpg" class="card-img-top" alt="stylistic truffle atop chocolate pieces">
                         <div class="card-body">
@@ -88,7 +88,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 pb-5 d-flex align-items-center justify-content-center">
+                <div class="col-md-4 pb-5 d-flex align-items-start justify-content-center">
                     <div class="card" style="width: 20rem;">
                         <img src="images/raspberries.jpeg" class="card-img-top" alt="raspberryies beside chocolate pieces">
                         <div class="card-body">
