--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <h2 class="col-12 pb-5 d-flex align-items-center justify-content-center display-4 playfair">Seasonal Favorites</h2><hr>
                 <div class="col-md-4  pb-5 d-flex align-items-start justify-content-center">
                     <div class="card" style="width: 20rem;">
-                        <img src="images/strawberry.jpg" class="card-img-top" alt="strawberry with chocolate sauce">
+                        <img src="images/strawberry_cropped.jpg" class="card-img-top" alt="strawberry with chocolate sauce">
                         <div class="card-body">
                             <h5 class="card-title playfair">Chocolate-covered Strawberries</h5>
                             <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus sed laborum, fugiat iure debitis repellat cupiditate, nisi ab voluptas saepe facilis, rem aperiam sunt id. Beatae facere officiis quas reprehenderit!</p>
@@ -80,7 +80,7 @@
                 </div>
                 <div class="col-md-4 pb-5 d-flex align-items-start justify-content-center">
                     <div class="card" style="width: 20rem;">
-                        <img src="images/truffle.jpg" class="card-img-top" alt="stylistic truffle atop chocolate pieces">
+                        <img src="images/truffle_cropped.jpg" class="card-img-top" alt="stylistic truffle atop chocolate pieces">
                         <div class="card-body">
                             <h5 class="card-title playfair">Truffle Assortment</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem culpa corrupti harum sit tenetur? Labore architecto, soluta laudantium, hic excepturi natus molestias esse laboriosam, quasi ad pariatur asperiores placeat eveniet!</p>
@@ -90,9 +90,9 @@
                 </div>
                 <div class="col-md-4 pb-5 d-flex align-items-start justify-content-center">
                     <div class="card" style="width: 20rem;">
-                        <img src="images/raspberries.jpeg" class="card-img-top" alt="raspberryies beside chocolate pieces">
+                        <img src="images/raspberries_cropped.jpeg" class="card-img-top" alt="raspberryies beside chocolate pieces">
                         <div class="card-body">
-                            <h5 class="card-title playfair">Dark Chocolate with Raspberry Filling</h5>
+                            <h5 class="card-title playfair">Raspberry Dark Chocolate</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae fuga recusandae, dolorum quo numquam saepe! Unde odit expedita sed quod nemo possimus recusandae ea, adipisci, dicta amet rerum perferendis sit!</p>
                             <a href="#" class="btn btn-dark d-flex justify-content-center">Add to Cart</a>
                         </div>
